COMMIT ADDING BRIEF API
